2_ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
    name: dashboard-ingress
spec:
  tls:
    - hosts:
      - my-dashboard.com
      secretName: board-tls-secret.default
  rules:
  - host: my-dashboard.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80

#10.108.114.114 CUSTER-IP
